[package]
authors = ["Siegfried Weber <mail@siegfriedweber.net>"]
description = "Common functions used in the integration tests of the Stackable components"
edition = "2018"
license = "Apache-2.0"
name = "integration-test-commons"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
futures = "0.3"
indoc = "1.0"
k8s-openapi = { version = "0.11", default-features = false, features = ["v1_20"] }
kube = "0.52"
kube-derive = "0.52"
kube-runtime = "0.52"
schemars = "0.8"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
spectral = "0.6"
tokio = { version = "1.6", features = ["rt-multi-thread"] }
uuid = { version = "0.8", features = ["v4"] }
