[package]
authors = ["Siegfried Weber <mail@siegfriedweber.net>"]
description = "Common functions used in the integration tests of the Stackable components"
edition = "2018"
license = "Apache-2.0"
name = "integration-test-commons"
repository = "https://github.com/stackabletech/integration-test-commons"
version = "0.7.0-nightly"

[dependencies]
anyhow = "1.0"
futures = "0.3"
indoc = "1.0"
k8s-openapi = { version = "0.13", default-features = false }
kube = "0.60"
kube-derive = "0.60"
kube-runtime = "0.60"
once_cell = "1.8"
schemars = "0.8"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
spectral = "0.6"
tokio = { version = "1.10", features = ["rt-multi-thread"] }
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
k8s-openapi = { version = "0.13", default-features = false, features = ["v1_22"] }
